# m5stack-core2-rust-slint

./: .gitignore  Cargo.toml  README.md  build.rs  sdkconfig.defaults
src/: audio.rs  axp192_led.rs  config.rs  imu.rs  m5stack.rs  main.rs  slint_platform.rs  speaker.rs
src/m5stack/: audio.rs  config.rs  display.rs  mod.rs  power.rs  touch.rs
ui/: hello.slint
