[package]
name = "hw-hello-world"
version = "0.1.0"
authors = ["Nesh108"]
edition = "2021"
resolver = "2"
license = "MIT"
description = "Slint UI framework on M5Stack Core2 using Rust"
repository = "https://github.com/Nesh108/hw-hello-world"
keywords = ["m5stack", "slint", "esp32", "embedded", "gui"]
categories = ["embedded", "gui"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
esp-idf-svc = { version = "0.50", default-features = false }
esp-idf-hal = "0.45"
esp-idf-sys = "0.36"
slint = { version = "1.5", default-features = false, features = ["unsafe-single-threaded", "renderer-software", "libm", "compat-1-2"] }
embedded-graphics = "0.8"
display-interface = "0.5"
display-interface-spi = "0.5"
mipidsi = "0.8"

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }
slint-build = "1.5"
